Fixed opacity on animation of project pic on mobile

--- a/assets/_animations.scss
+++ b/assets/_animations.scss
@@ -46,7 +46,7 @@
 
 
 .flow-down-before-enter {
-  // opacity: 0;
+  opacity: 0;
   // transform: translateY(-50%);
 }
 .flow-down-enter {
